--- a/source/_posts/随笔-1.md
+++ b/source/_posts/随笔-1.md
@@ -18,7 +18,7 @@ photos:
 
 看着大家各种追剧、追综艺、追星，乐此不疲，其乐融融，废寝忘食。沉浸在喜欢的事情中不能自拔。
 
-我除了看经久不衰的《海绵宝宝》、《蜡笔小新》也没有过多的爱好，感觉自己挺可悲的，说不定到老回想起来，碌碌无为过完这一生。
+我除了看经久不衰的《海绵宝宝》、《蜡笔小新》等也没有过多的爱好，感觉自己挺可悲的，说不定到老回想起来，碌碌无为过完这一生。
 
 我也用微博，但我在微博上不发表任何评论，因为我的意见并不会有什么实质性作用。有时看着网友各显神通，从各种角度剖析，分解。言辞之凿凿，语言之精辟，角度之刁钻，让我发自内心的佩服。
 
